# compiler

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PROFILING.md  README.md  Setup.hs  hie.yaml  runrust  shell.nix  stack.yaml  zkscc.cabal
cfg/: ev.ccc  highway-tax.ccc  permitall.ccc
circom-frontend/: Sha256Test.zksc  cube_out.circom  cube_out_prime.txt  example_call_circom.zksc  extend_witness  prepare_circuit  sha256test.circom
compiler/: DocGen.hs  Main.hs
emp-wrapper/: .gitignore  CMakeLists.txt  README.md  emp-zkc.cpp  emp-zkc.hpp
filterprimes/: Main.hs  earlyprimes.txt
language-server/: Index.hs  Main.hs
sieveir/: sieveir.cabal  stack.yaml
sieveir/example/: Main.hs
sieveir/src/: SieveIR.hs  SieveIR1.hs  SieveIR1E.hs
sieveir/src/SieveIR/: Types.hs
sieveir/src/SieveIR/Format/: Binary.hs  Text.hs
sieveir/src/SieveIR/Internal/: Schema.hs  sieve.fbs
sieveir/src/SieveIR1/: Types.hs
sieveir/src/SieveIR1/Format/: Text.hs
sieveir/src/SieveIR1E/: Types.hs
sieveir/src/SieveIR1E/Format/: Text.hs
src/: Compiler.hs  CompilerException.hs  ConfigurationCheck.hs  EmbeddedStdlib.hs
src/Basic/: Fixity.hs  Location.hs  Message.hs  Name.hs  Var.hs
src/CCC/: Checks.hs  Lexer.x  Parser.y  Syntax.hs  SyntaxDump.hs  Tokens.hs
src/Core/: LambdaLifting.hs  Pretty.hs  Syntax.hs  Translate.hs
src/Parser/: Alex.hs  Effect.hs  HasEOF.hs  LexAction.hs  Lexer.x  Monad.hs  Parser.y  Precedence.hs  Syntax.hs  SyntaxDump.hs  Tokens.hs
src/Rust/: CoreToRust.hs  PrimitiveTypes.hs  SemanticsHelpers.hs
src/Rust/zksc-air/: Cargo.toml
src/Rust/zksc-air/src/: main.rs
src/Rust/zksc-app-lib/: Cargo.toml
src/Rust/zksc-app-lib/src/: builtins.rs  call_circom.rs  circuit_parser.rs  command_line.rs  context.rs  externs_header.rs  externs_stdlib.rs  integer.rs  lib.rs  oob_challenge.rs  sieve.rs  stack.rs  value.rs  value_conversions.rs  zksc_integer.rs  zksc_types.rs
src/Rust/zksc-circom/: Cargo.toml
src/Rust/zksc-circom/src/: main.rs
src/Rust/zksc-dummy/: Cargo.toml
src/Rust/zksc-dummy/src/: main.rs
src/Rust/zksc-emp/: Cargo.toml  build.rs  wrapper.h
src/Rust/zksc-emp/data/: README.md
src/Rust/zksc-emp/src/: main.rs
src/Rust/zksc-ir0plus/: Cargo.toml
src/Rust/zksc-ir0plus/src/: main.rs
src/Support/: Bag.hs  EmbedCompressedFiles.hs  MonoidState.hs  Pretty.hs  StackState.hs  UniqMap.hs  UniqSet.hs  Unique.hs
src/Typing/: Builtin.hs  ConstraintSolver.hs  Constraints.hs  EffectChecker.hs  Kind.hs  KindChecker.hs  Rename.hs  StructEnv.hs  TcM.hs  Type.hs  Typing.hs
stdlib/: BigInt.zksc  Bitextract.zksc  CallCircom.zksc  Char.zksc  ChrVec.zksc  DFA.zksc  Date.zksc  EC.zksc  FastFixedPoint.zksc  FastFixedPointVec.zksc  FixedPoint.zksc  Floats.zksc  Inequalities.zksc  Integer.zksc  IsFromFirst.zksc  Json.zksc  JsonNode.zksc  JsonParseNode.zksc  JsonRule.zksc  OldInequalities.zksc  Perm.zksc  Poseidon.zksc  Prob.zksc  Ratio.zksc  SetOp.zksc  Std.zksc  Store.zksc  StoreVec.zksc  String.zksc  Text.zksc  Vec.zksc  Waksman.zksc
test/: Examples.hs  LanguageServer.hs  Main.hs  RegressionFiles.hs  SpecHelper.hs  TestCCC.hs  Typing.hs
test/data/: example.ccc  example.zksc
test/regression/: 04-field-access.zksc  example_importer.zksc  import_me.zksc  structs_typing.zksc
vscode-zksc/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  zk-secrec.tmGrammar.json  zksc.vim
vscode-zksc/src/: extension.ts
ymlgen/: CSV.hs  Main.hs  Yaml.hs  YamlGen.hs
ymlgen/Description/: BigInt.csv  Bitextract.csv  Builtin.csv  Char.csv  ChrVec.csv  DFA.csv  Date.csv  EC.csv  FastFixedPoint.csv  FastFixedPointVec.csv  FixedPoint.csv  Inequalities.csv  Integer.csv  IsFromFirst.csv  OldInequalities.csv  Perm.csv  Poseidon.csv  Prob.csv  Ratio.csv  SetOp.csv  Std.csv  Store.csv  StoreVec.csv  String.csv  Text.csv  Vec.csv  Waksman.csv
zksc-air/: Cargo.toml
zksc-air/src/: air_gen.rs  function_scope.rs  lib.rs  symbolic.rs
