[package]
name = "zksc-dummy"
version = "0.3.0"
edition = "2021"

[dependencies]
zksc-app-lib = { path = "../zksc-app-lib/" }
log = "0.4"
simple_logger = "2.3"
num-traits = "0.2"
num-bigint = { version = "0.4", default-features = false }

[features]
default = []
zksc_debug = ["zksc-app-lib/zksc_debug"]